--- a/.gitignore
+++ b/.gitignore
@@ -85,7 +85,7 @@ ipython_config.py
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+# .python-version          # keep tracked to pin interpreter
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -161,3 +161,11 @@ cython_debug/
 
 # Wowza example code
 PublishOnTextData/
+
+# Java build artifacts
+*.class
+*.jar
+
+# OS specific files
+.DS_Store
+Thumbs.db
