--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ black = "^23.7.0"
 isort = "^5.12.0"
 mypy = "^1.4.0"
 flake8 = "^6.0.0"
+ruff = "^0.8.0"
 
 [tool.poetry.scripts]
 archive_transcriber = "python.tools.archive_transcriber:main"
