feat: implement remote transcription and cloud GPU support
- Added `remote_whisper_server.py` to handle audio transcription via a cloud GPU, utilizing FastAPI for HTTP requests.
- Introduced `archive_transcriber_remote.py` for processing video jobs with remote inference, including audio extraction and VTT generation.
- Updated `pyproject.toml` to include FastAPI, Uvicorn, and Requests as dependencies for the new functionality.
- Created `CLOUD_GPU_SETUP.md` documentation to guide users on setting up and using cloud GPUs for transcription tasks.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ numpy = ">=1.26,<2.0"
 aiofiles = "*"
 hf_xet = "*"
 tqdm = "*"
+fastapi = "*"
+uvicorn = {extras = ["standard"], version = "*"}
+requests = "*"
 
 websockets = "*"
 
