--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ uvicorn = {extras = ["standard"], version = "*"}
 requests = "*"
 
 websockets = "*"
+torch = "*"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
